--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,19 @@
+.header h1{
+	font-size: xx-large;
+	font-family: 'Pacifico', cursive;
+}
+.deconnexion{
+	float:right;
+}
+.background{
+	background-image: url("../files/photo_couverture.jpg");
+	width:100%;
+	height: 100vh;
+}
+.description{
+	background: rgba(255,255,255,0.5);;
 
+}
+.description h2{
+	font-size: xx-large;
+}
