--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,7 @@
 	height: 100vh;
 }
 .description{
-	background: rgba(255,255,255,0.5);;
-
+	background: rgba(255,255,255,0.5);
 }
 .description h2{
 	font-size: xx-large;
