--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body{
+	height: 100vh;
+}
+header{
+	height: 10vh;
+}
 .header h1{
 	font-size: xx-large;
 	font-family: 'Pacifico', cursive;
@@ -6,9 +12,8 @@
 	float:right;
 }
 .background{
-	background-image: url("../files/photo_couverture.jpg");
 	width:100%;
-	height: 100vh;
+	height: 90vh;
 }
 .description{
 	background: rgba(255,255,255,0.5);;
