--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body{
 	height: 100vh;
 }
-header{
-	height: 10vh;
+nav{
+	height: 7vh;
 }
 .header h1{
 	font-size: xx-large;
@@ -13,7 +13,7 @@ header{
 }
 .background{
 	width:100%;
-	height: 90vh;
+	height: 93vh;
 }
 .description{
 	background: rgba(255,255,255,0.5);;
